syntax = "proto3";

package api_proto;

message Profile {
    string name = 1;
    string location = 2;
    string image = 3;
    bytes  identityPubKey = 4;
    bytes  ethereumPubKey = 5;
    bytes  chatIdentityPubKey = 6;
    int64 timestamp = 7;
    uint32 version = 8;

    bytes  identityKeySignature = 9;
    bytes  ethereumKeySignature = 10;
}